did another section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anak</title>
 
+    <!-- CSS LINK -->
     <link rel="stylesheet" href="scss/main.css">
 </head>
 <body>
@@ -45,9 +46,53 @@
                 </div>
             </div>
         </section>
-        
-        <section class="test"></section>
-        <section></section>
+        <!-- FEATURED CATEGORY SECTION -->
+        <section class="featured-category-section">
+            <p>Pick something from our featured category!</p>
+
+            <div class="cards">
+                <div class="card">
+                    <a href="">
+                        <img src="assets/imgs/featured-category-img(1).png" alt="">
+                    </a>
+                    <p>Duck Toy</p>
+                </div>
+                <div class="card">
+                    <a href="">
+                        <img src="assets/imgs/featured-category-img(5).png" alt="">
+                    </a>
+                    <p>Toy Box</p>
+                </div>
+                <div class="card">
+                    <a href="">
+                        <img src="assets/imgs/featured-category-img(3).png" alt="">
+                    </a>
+                    <p>Stroller</p>
+                </div>
+                <div class="card">
+                    <a href="">
+                        <img src="assets/imgs/featured-category-img(2).png" alt="">
+                    </a>
+                    <p>Baby Walker</p>
+                </div>
+                <div class="card">
+                    <a href="">
+                        <img src="assets/imgs/featured-category-img(4).png" alt="">
+                    </a>
+                    <p>Dog Collar</p>
+                </div>
+                <div class="card">
+                    <a href="">
+                        <img src="assets/imgs/featured-category-more.png" alt="">
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <!-- TOP TREDNING SECTION -->
+        <section class="trending-section">
+
+        </section>
         <section></section>
 
     </main>
