--- a/index.html
+++ b/index.html
@@ -93,50 +93,51 @@
 
         <!-- TOP TREDNING SECTION -->
         <section class="trending-section section">
-            <h3 class="section-title">Top <span>Trending</span></h3>
+            <h3 class="trending-title">Top <span>Trending</span></h3>
 
-            <div class="categories__container swiper">
-                <div class="swiper-wrapper">
-                    <a href="#" class="category__item swiper-slide">
-                        <img src="assets/imgs/featured-category-img(1).png" alt="" class="category__img">
-
-                        <h3 class="category__title">T-shirt</h3>
+            <div class="trending-container swiper">
+                <div class="cards swiper-wrapper">
+                    <a href="#" class="card swiper-slide">
+                        <img src="assets/imgs/featured-category-img(1).png" alt="Product Image" class="category__img">
+                        <h3 class="category__title">Juniors 12-Piece Bunny Print Clothing Gift Set</h3>
+                        <p class="price">AED 99</p>
                     </a>
-                    <a href="" class="category__item swiper-slide">
-                        <img src="assets/imgs/featured-category-img(2).png" alt="" class="category__img">
-
-                        <h3 class="category__title">T-shirt</h3>
+                    <a href="#" class="card swiper-slide">
+                        <img src="assets/imgs/featured-category-img(1).png" alt="Product Image" class="category__img">
+                        <h3 class="category__title">Juniors 12-Piece Bunny Print Clothing Gift Set</h3>
+                        <p class="price">AED 99</p>
                     </a>
-                    <a href="" class="category__item swiper-slide">
-                        <img src="assets/imgs/featured-category-img(3).png" alt="" class="category__img">
-
-                        <h3 class="category__title">T-shirt</h3>
+                    <a href="#" class="card swiper-slide">
+                        <img src="assets/imgs/featured-category-img(1).png" alt="Product Image" class="category__img">
+                        <h3 class="category__title">Juniors 12-Piece Bunny Print Clothing Gift Set</h3>
+                        <p class="price">AED 99</p>
                     </a>
-                    <a href="" class="category__item swiper-slide">
-                        <img src="assets/imgs/featured-category-img(4).png" alt="" class="category__img">
-
-                        <h3 class="category__title">T-shirt</h3>
+                    <a href="#" class="card swiper-slide">
+                        <img src="assets/imgs/featured-category-img(1).png" alt="Product Image" class="category__img">
+                        <h3 class="category__title">Juniors 12-Piece Bunny Print Clothing Gift Set</h3>
+                        <p class="price">AED 99</p>
                     </a>
-                    <a href="" class="category__item swiper-slide">
-                        <img src="assets/imgs/featured-category-img(5).png" alt="" class="category__img">
-
-                        <h3 class="category__title">T-shirt</h3>
+                    <a href="#" class="card swiper-slide">
+                        <img src="assets/imgs/featured-category-img(1).png" alt="Product Image" class="category__img">
+                        <h3 class="category__title">Juniors 12-Piece Bunny Print Clothing Gift Set</h3>
+                        <p class="price">AED 99</p>
                     </a>
-                    <a href="" class="category__item swiper-slide">
-                        <img src="assets/imgs/featured-category-img(1).png" alt="" class="category__img">
-
-                        <h3 class="category__title">T-shirt</h3>
+                    <a href="#" class="card swiper-slide">
+                        <img src="assets/imgs/featured-category-img(1).png" alt="Product Image" class="category__img">
+                        <h3 class="category__title">Juniors 12-Piece Bunny Print Clothing Gift Set</h3>
+                        <p class="price">AED 99</p>
                     </a>
-                    <a href="" class="category__item swiper-slide">
-                        <img src="assets/imgs/featured-category-img(1).png" alt="" class="category__img">
-
-                        <h3 class="category__title">T-shirt</h3>
+                    <a href="#" class="card swiper-slide">
+                        <img src="assets/imgs/featured-category-img(1).png" alt="Product Image" class="category__img">
+                        <h3 class="category__title">Juniors 12-Piece Bunny Print Clothing Gift Set</h3>
+                        <p class="price">AED 99</p>
                     </a>
-                    <a href="" class="category__item swiper-slide">
-                        <img src="assets/imgs/featured-category-img(1).png" alt="" class="category__img">
-
-                        <h3 class="category__title">T-shirt</h3>
+                    <a href="#" class="card swiper-slide">
+                        <img src="assets/imgs/featured-category-img(1).png" alt="Product Image" class="category__img">
+                        <h3 class="category__title">Juniors 12-Piece Bunny Print Clothing Gift Set</h3>
+                        <p class="price">AED 99</p>
                     </a>
+                      
 
                 </div>
 
