--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
                         <p class="price">AED 99</p>
                     </a>
                     <a href="#" class="card swiper-slide">
-                        <img src="assets/imgs/featured-category-img(1).png" alt="Product Image" class="category__img">
-                        <h3 class="category__title">Juniors 12-Piece Bunny Print Clothing Gift Set</h3>
-                        <p class="price">AED 99</p>
+                        <img src="assets/imgs/gumigoogifahaha_.gif" alt="Product Image" class="category__img">
+                        <h3 class="category__title">OMG ITS FUCKING GUMIGOO</h3>
+                        <p class="price">AED 1.2M</p>
                     </a>
                       
 
