added the spring selection placeholder

--- a/index.html
+++ b/index.html
@@ -151,7 +151,13 @@
         </section>
 
         <!-- BANNER SECTION -->
-        <section></section>
+        <section class="banner">banner goes here</section>
+
+        <!-- SPRING SELECTION SECTION -->
+         <section class="spring-selction-section">
+            
+         </section>
+
 
     </main>
 
