started on the reviews section first

--- a/index.html
+++ b/index.html
@@ -158,6 +158,14 @@
             
          </section>
 
+         <!-- REVIEWS SECTION -->
+          <section class="reviews-section">
+            <h1 class="title-header">OUR HAPPY CUSTOMERS</h1>
+
+            <div class="review-cards">
+                
+            </div>
+          </section>
 
     </main>
 
