did some progress on the reviews section

--- a/index.html
+++ b/index.html
@@ -163,7 +163,23 @@
             <h1 class="title-header">OUR HAPPY CUSTOMERS</h1>
 
             <div class="review-cards">
-                
+                <div class="review-card">
+                    <span class="review-count">23 Reviews</span>
+                    <p class="review-text">
+                      I was hesitating to buy my baby’s items online because I didn’t know if they would be shipped in good condition.
+                      But Babystore delivered everything on time and the packaging of all the products was amazing. I will definitely be shopping from here again!
+                    </p>
+                    <button class="read-more">Read More</button>
+                    <hr />
+                    <div class="reviewer">
+                      <div class="reviewer-logo">b</div>
+                      <div class="reviewer-info">
+                        <p class="reviewer-name">Iqra</p>
+                        <p class="reviewer-role">House Wife</p>
+                      </div>
+                    </div>
+                </div>
+
             </div>
           </section>
 
