--- a/index.html
+++ b/index.html
@@ -151,7 +151,12 @@
         </section>
 
         <!-- BANNER SECTION -->
-        <section class="banner">banner goes here</section>
+        <section class="banner">
+            <div class="box box-1">box-1</div>
+            <div class="box pic-2">pic-2</div>
+            <div class="box pic-3">pic-3</div>
+            <div class="box pic-4">pic-4</div>
+        </section>
 
         <!-- SPRING SELECTION SECTION -->
          <section class="spring-selction-section">
