structured the banner more

--- a/index.html
+++ b/index.html
@@ -152,10 +152,14 @@
 
         <!-- BANNER SECTION -->
         <section class="banner">
-            <div class="box box-1">box-1</div>
+            <div class="box pic-1">box-1</div>
             <div class="box pic-2">pic-2</div>
             <div class="box pic-3">pic-3</div>
-            <div class="box pic-4">pic-4</div>
+            <div class="box pic-4">
+                <div class="inner-box">box-A</div>
+                <div class="inner-box">box-B</div>
+                <div class="inner-box">box-C</div>
+            </div>
         </section>
 
         <!-- SPRING SELECTION SECTION -->
