--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 </head>
 <body>
-    <!-- NAV BAR -->
+    <!-- NAV BAR  -->
+     <!-- note to self make the nav dissapear when scroll up -->
     <header>
         <nav>
             <div class="nav-logo">
@@ -151,14 +152,18 @@
         </section>
 
         <!-- BANNER SECTION -->
-        <section class="banner">
-            <div class="box pic-1">box-1</div>
-            <div class="box pic-2">pic-2</div>
-            <div class="box pic-3">pic-3</div>
-            <div class="box pic-4">
-                <div class="inner-box">box-A</div>
-                <div class="inner-box">box-B</div>
-                <div class="inner-box">box-C</div>
+        <section class="banner-section">
+            <p class="banner-title">Shop by categories</p>
+
+            <div class="banner">
+                <div class="box pic-1">box-1</div>
+                <div class="box pic-2">pic-2</div>
+                <div class="box pic-3">pic-3</div>
+                <div class="box pic-4">
+                    <div class="inner-box">box-A</div>
+                    <div class="inner-box">box-B</div>
+                    <div class="inner-box">box-C</div>
+                </div>
             </div>
         </section>
 
