--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
             <div class="nav-logo">
                 <a href="#">
-                    <img src="assets/imgss/logo-nav.png" alt="Logo">
+                    <img src="assets/imgs/logo-nav.png" alt="Logo">
                 </a>
             </div>
     
@@ -56,37 +56,37 @@
             <div class="cards">
                 <div class="card">
                     <a href="">
-                        <img src="assets/imgss/featured-category-img(1).png" alt="">
+                        <img src="assets/imgs/featured-category-img(1).png" alt="">
                     </a>
                     <p>Duck Toy</p>
                 </div>
                 <div class="card">
                     <a href="">
-                        <img src="assets/imgss/featured-category-img(5).png" alt="">
+                        <img src="assets/imgs/featured-category-img(5).png" alt="">
                     </a>
                     <p>Toy Box</p>
                 </div>
                 <div class="card">
                     <a href="">
-                        <img src="assets/imgss/featured-category-img(3).png" alt="">
+                        <img src="assets/imgs/featured-category-img(3).png" alt="">
                     </a>
                     <p>Stroller</p>
                 </div>
                 <div class="card">
                     <a href="">
-                        <img src="assets/imgss/featured-category-img(2).png" alt="">
+                        <img src="assets/imgs/featured-category-img(2).png" alt="">
                     </a>
                     <p>Baby Walker</p>
                 </div>
                 <div class="card">
                     <a href="">
-                        <img src="assets/imgss/featured-category-img(4).png" alt="">
+                        <img src="assets/imgs/featured-category-img(4).png" alt="">
                     </a>
                     <p>Dog Collar</p>
                 </div>
                 <div class="card">
                     <a href="">
-                        <img src="assets/imgss/featured-category-more.png" alt="">
+                        <img src="assets/imgs/featured-category-more.png" alt="">
                     </a>
                 </div>
             </div>
@@ -99,42 +99,42 @@
             <div class="trending-container swiper">
                 <div class="cards swiper-wrapper">
                     <a href="#" class="card swiper-slide">
-                        <img src="assets/imgss/featured-category-img(1).png" alt="Product Image" class="category__img">
+                        <img src="assets/imgs/featured-category-img(1).png" alt="Product Image" class="category__img">
                         <h3 class="category__title">Juniors 12-Piece Bunny Print Clothing Gift Set</h3>
                         <p class="price">AED 99</p>
                     </a>
                     <a href="#" class="card swiper-slide">
-                        <img src="assets/imgss/featured-category-img(1).png" alt="Product Image" class="category__img">
+                        <img src="assets/imgs/featured-category-img(1).png" alt="Product Image" class="category__img">
                         <h3 class="category__title">Juniors 12-Piece Bunny Print Clothing Gift Set</h3>
                         <p class="price">AED 99</p>
                     </a>
                     <a href="#" class="card swiper-slide">
-                        <img src="assets/imgss/featured-category-img(1).png" alt="Product Image" class="category__img">
+                        <img src="assets/imgs/featured-category-img(1).png" alt="Product Image" class="category__img">
                         <h3 class="category__title">Juniors 12-Piece Bunny Print Clothing Gift Set</h3>
                         <p class="price">AED 99</p>
                     </a>
                     <a href="#" class="card swiper-slide">
-                        <img src="assets/imgss/featured-category-img(1).png" alt="Product Image" class="category__img">
+                        <img src="assets/imgs/featured-category-img(1).png" alt="Product Image" class="category__img">
                         <h3 class="category__title">Juniors 12-Piece Bunny Print Clothing Gift Set</h3>
                         <p class="price">AED 99</p>
                     </a>
                     <a href="#" class="card swiper-slide">
-                        <img src="assets/imgss/featured-category-img(1).png" alt="Product Image" class="category__img">
+                        <img src="assets/imgs/featured-category-img(1).png" alt="Product Image" class="category__img">
                         <h3 class="category__title">Juniors 12-Piece Bunny Print Clothing Gift Set</h3>
                         <p class="price">AED 99</p>
                     </a>
                     <a href="#" class="card swiper-slide">
-                        <img src="assets/imgss/featured-category-img(1).png" alt="Product Image" class="category__img">
+                        <img src="assets/imgs/featured-category-img(1).png" alt="Product Image" class="category__img">
                         <h3 class="category__title">Juniors 12-Piece Bunny Print Clothing Gift Set</h3>
                         <p class="price">AED 99</p>
                     </a>
                     <a href="#" class="card swiper-slide">
-                        <img src="assets/imgss/featured-category-img(1).png" alt="Product Image" class="category__img">
+                        <img src="assets/imgs/featured-category-img(1).png" alt="Product Image" class="category__img">
                         <h3 class="category__title">Juniors 12-Piece Bunny Print Clothing Gift Set</h3>
                         <p class="price">AED 99</p>
                     </a>
                     <a href="#" class="card swiper-slide">
-                        <img src="assets/imgss/gumigoogifahaha_.gif" alt="Product Image" class="category__img">
+                        <img src="assets/imgs/gumigoogifahaha_.gif" alt="Product Image" class="category__img">
                         <h3 class="category__title">OMG ITS FUCKING GUMIGOO</h3>
                         <p class="price">AED 1.2M</p>
                     </a>
@@ -1783,7 +1783,7 @@
 
             <div class="review-promise">
                 <div class="img-container">
-                    <img src="assets/imgss/review-pictures.png" alt="">
+                    <img src="assets/imgs/review-pictures.png" alt="">
                 </div>
 
                 <div class="text-container">
