made the timer thingie ahh...

--- a/index.html
+++ b/index.html
@@ -604,6 +604,385 @@
             </div>
           </div>
         </section>
+
+        <!-- DEALS SECTION  -->
+        <section class="deals-section section">
+          <div class="deals__container grid">
+            <div class="deals__item">
+              <div class="deals__group">
+                <h3 class="deals__brand">Deal of the Day</h3>
+                <span class="deals__category">Limited quantities.</span>
+              </div>
+
+              <h4 class="deals__title">Summer Collection New Morden Design</h4>
+
+              <div class="deals__price flex">
+                <span class="new__price">$139.00</span>
+                <span class="old__price">$160.99</span>
+              </div>
+
+              <div class="deals__group">
+                <p class="deals__countdown-text">Hurry Up! Offer End In:</p>
+
+                <div class="countdown">
+                  <div class="countdown__amount">
+                    <p class="countdown__period">02</p>
+                    <span class="unit">Days</span>
+                  </div>
+                  <div class="countdown__amount">
+                    <p class="countdown__period">22</p>
+                    <span class="unit">Hours</span>
+                  </div>
+                  <div class="countdown__amount">
+                    <p class="countdown__period">57</p>
+                    <span class="unit">Mins</span>
+                  </div>
+                  <div class="countdown__amount">
+                    <p class="countdown__period">24</p>
+                    <span class="unit">Sec</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="deals__btn">
+                <a href="details.html" class="btn btn--md">Shop Now</a>
+              </div>
+            </div>
+
+            <div class="deals__item">
+              <div class="deals__group">
+                <h3 class="deals__brand">Women Clothing</h3>
+                <span class="deals__category">Limited quantities.</span>
+              </div>
+
+              <h4 class="deals__title">Try something new on vacation</h4>
+
+              <div class="deals__price flex">
+                <span class="new__price">$139.00</span>
+                <span class="old__price">$160.99</span>
+              </div>
+
+              <div class="deals__group">
+                <p class="deals__countdown-text">Hurry Up! Offer End In:</p>
+
+                <div class="countdown">
+                  <div class="countdown__amount">
+                    <p class="countdown__period">02</p>
+                    <span class="unit">Days</span>
+                  </div>
+                  <div class="countdown__amount">
+                    <p class="countdown__period">22</p>
+                    <span class="unit">Hours</span>
+                  </div>
+                  <div class="countdown__amount">
+                    <p class="countdown__period">57</p>
+                    <span class="unit">Mins</span>
+                  </div>
+                  <div class="countdown__amount">
+                    <p class="countdown__period">24</p>
+                    <span class="unit">Sec</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="deals__btn">
+                <a href="details.html" class="btn btn--md">Shop Now</a>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- SHOWCASE SECTION -->
+        <section class="showcase section">
+          <div class="showcase__container container grid">
+            <div class="showcase__wrapper">
+              <h3 class="section__title">Hot Releases</h3>
+
+              <div class="showcase__item">
+                <a href="details.html" class="showcase__img-box">
+                  <img
+                    src="assets/imgs/showcase-img-1.jpg"
+                    alt=""
+                    class="showcase__img"
+                  />
+                </a>
+
+                <div class="showcase__content">
+                  <a href="details.html">
+                    <h4 class="showcase__title">
+                      Floral Print Casual Cotton Dress
+                    </h4>
+                  </a>
+
+                  <div class="showcase__price flex">
+                    <span class="new__price">$238.85</span>
+                    <span class="old__price">$245.8</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="showcase__item">
+                <a href="details.html" class="showcase__img-box">
+                  <img
+                    src="assets/imgs/showcase-img-2.jpg"
+                    alt=""
+                    class="showcase__img"
+                  />
+                </a>
+
+                <div class="showcase__content">
+                  <a href="details.html">
+                    <h4 class="showcase__title">
+                      Ruffled Solid Long Sleeve Blouse
+                    </h4>
+                  </a>
+
+                  <div class="showcase__price flex">
+                    <span class="new__price">$238.85</span>
+                    <span class="old__price">$245.8</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="showcase__item">
+                <a href="details.html" class="showcase__img-box">
+                  <img
+                    src="assets/imgs/showcase-img-3.jpg"
+                    alt=""
+                    class="showcase__img"
+                  />
+                </a>
+
+                <div class="showcase__content">
+                  <a href="details.html">
+                    <h4 class="showcase__title">
+                      Multi-color Print V-neck T-Shirt
+                    </h4>
+                  </a>
+
+                  <div class="showcase__price flex">
+                    <span class="new__price">$238.85</span>
+                    <span class="old__price">$245.8</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="showcase__wrapper">
+              <h3 class="section__title">Deals & Outlet</h3>
+
+              <div class="showcase__item">
+                <a href="details.html" class="showcase__img-box">
+                  <img
+                    src="assets/imgs/showcase-img-4.jpg"
+                    alt=""
+                    class="showcase__img"
+                  />
+                </a>
+
+                <div class="showcase__content">
+                  <a href="details.html">
+                    <h4 class="showcase__title">Fish Print Patched T-shirt</h4>
+                  </a>
+
+                  <div class="showcase__price flex">
+                    <span class="new__price">$238.85</span>
+                    <span class="old__price">$245.8</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="showcase__item">
+                <a href="details.html" class="showcase__img-box">
+                  <img
+                    src="assets/imgs/showcase-img-5.jpg"
+                    alt=""
+                    class="showcase__img"
+                  />
+                </a>
+
+                <div class="showcase__content">
+                  <a href="details.html">
+                    <h4 class="showcase__title">Vintage Floral Print Dress</h4>
+                  </a>
+
+                  <div class="showcase__price flex">
+                    <span class="new__price">$238.85</span>
+                    <span class="old__price">$245.8</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="showcase__item">
+                <a href="details.html" class="showcase__img-box">
+                  <img
+                    src="assets/imgs/showcase-img-6.jpg"
+                    alt=""
+                    class="showcase__img"
+                  />
+                </a>
+
+                <div class="showcase__content">
+                  <a href="details.html">
+                    <h4 class="showcase__title">
+                      Multi-color Stripe Circle T-Shirt
+                    </h4>
+                  </a>
+
+                  <div class="showcase__price flex">
+                    <span class="new__price">$238.85</span>
+                    <span class="old__price">$245.8</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="showcase__wrapper">
+              <h3 class="section__title">Top Selling</h3>
+
+              <div class="showcase__item">
+                <a href="details.html" class="showcase__img-box">
+                  <img
+                    src="assets/imgs/showcase-img-7.jpg"
+                    alt=""
+                    class="showcase__img"
+                  />
+                </a>
+
+                <div class="showcase__content">
+                  <a href="details.html">
+                    <h4 class="showcase__title">
+                      Geometric Printed Long Sleeve Blouse
+                    </h4>
+                  </a>
+
+                  <div class="showcase__price flex">
+                    <span class="new__price">$238.85</span>
+                    <span class="old__price">$245.8</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="showcase__item">
+                <a href="details.html" class="showcase__img-box">
+                  <img
+                    src="assets/imgs/showcase-img-8.jpg"
+                    alt=""
+                    class="showcase__img"
+                  />
+                </a>
+
+                <div class="showcase__content">
+                  <a href="details.html">
+                    <h4 class="showcase__title">Print Patchwork Maxi Dress</h4>
+                  </a>
+
+                  <div class="showcase__price flex">
+                    <span class="new__price">$238.85</span>
+                    <span class="old__price">$245.8</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="showcase__item">
+                <a href="details.html" class="showcase__img-box">
+                  <img
+                    src="assets/imgs/showcase-img-9.jpg"
+                    alt=""
+                    class="showcase__img"
+                  />
+                </a>
+
+                <div class="showcase__content">
+                  <a href="details.html">
+                    <h4 class="showcase__title">
+                      Daisy Floral Print Straps Jumpsuit
+                    </h4>
+                  </a>
+
+                  <div class="showcase__price flex">
+                    <span class="new__price">$238.85</span>
+                    <span class="old__price">$245.8</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="showcase__wrapper">
+              <h3 class="section__title">Trendy</h3>
+
+              <div class="showcase__item">
+                <a href="details.html" class="showcase__img-box">
+                  <img
+                    src="assets/imgs/showcase-img-1.jpg"
+                    alt=""
+                    class="showcase__img"
+                  />
+                </a>
+
+                <div class="showcase__content">
+                  <a href="details.html">
+                    <h4 class="showcase__title">
+                      Floral Print Casual Cotton Dress
+                    </h4>
+                  </a>
+
+                  <div class="showcase__price flex">
+                    <span class="new__price">$238.85</span>
+                    <span class="old__price">$245.8</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="showcase__item">
+                <a href="details.html" class="showcase__img-box">
+                  <img
+                    src="assets/imgs/showcase-img-2.jpg"
+                    alt=""
+                    class="showcase__img"
+                  />
+                </a>
+
+                <div class="showcase__content">
+                  <a href="details.html">
+                    <h4 class="showcase__title">
+                      Ruffled Solid Long Sleeve Blouse
+                    </h4>
+                  </a>
+
+                  <div class="showcase__price flex">
+                    <span class="new__price">$238.85</span>
+                    <span class="old__price">$245.8</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="showcase__item">
+                <a href="details.html" class="showcase__img-box">
+                  <img
+                    src="assets/imgs/showcase-img-3.jpg"
+                    alt=""
+                    class="showcase__img"
+                  />
+                </a>
+
+                <div class="showcase__content">
+                  <a href="details.html">
+                    <h4 class="showcase__title">
+                      Multi-color Print V-neck T-Shirt
+                    </h4>
+                  </a>
+
+                  <div class="showcase__price flex">
+                    <span class="new__price">$238.85</span>
+                    <span class="old__price">$245.8</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
       </section>
 
       <!-- PRODUCTS SECTION -->
