finished the showcase i think

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <!-- <link rel="stylesheet" href="scss/secondary.css"> -->
     <!-- SWIPER CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+    <!--=============== FLATICON ===============-->
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/uicons-regular-straight/css/uicons-regular-straight.css"
+    />
 </head>
 <body>
     <!-- NAV BAR  -->
@@ -693,7 +698,7 @@
         </section>
 
         <!-- SHOWCASE SECTION -->
-        <section class="showcase section">
+        <section class="showcase-section section">
           <div class="showcase__container container grid">
             <div class="showcase__wrapper">
               <h3 class="section__title">Hot Releases</h3>
