made the landing page part of the gsap

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
     <!-- PRE LOADER -->
     <div class="pre-loader">
         <div class="content">
-            <div class="text">
-                Rainer is currently <span>loading</span> &#58;&#40;
+            <div class="pre-loader-container">
+                <img class="pre-logo-img" src="assets/imgs/logo-pre-loader.png" alt="">
+                <img class="pre-logo-text" src="assets/imgs/logo-text-pre-loader.png" alt="">
             </div>
             <div class="loader"></div>
         </div>
