implanted images in the banner

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
 
     <!-- PRE LOADER -->
-    <div class="pre-loader">
+    <!-- <div class="pre-loader">
         <div class="content">
             <div class="pre-loader-container">
                 <img class="pre-logo-img" src="assets/imgs/logo-pre-loader.png" alt="">
@@ -29,7 +29,7 @@
             </div>
             <div class="loader"></div>
         </div>
-    </div>
+    </div> -->
 
 
     <!-- NAV BAR  -->
@@ -220,13 +220,21 @@
       <!-- BANNER SECTION -->
       <section class="banner-section">
         <div class="banner">
-          <div class="box pic-1">box-1</div>
-          <div class="box pic-2">pic-2 </div>
-          <div class="box pic-3">pic-3 (hidden)</div>
-          <div class="box pic-4">
-            <div class="inner-box">box-A</div>
-            <div class="inner-box">box-B</div>
-            <div class="inner-box">box-C</div>
+          <div class="box pic-1">
+            <div class="desc">
+              <h1>Frame Cat Scratcher <br> <span>Pettel</span></h1>
+            </div>
+          </div>
+          <div class="box pic-2"><div class="desc">
+            <h1>
+              Make your doggy <span>dripped out</span> fr fr
+            </h1>
+          </div></div>
+          <div class="box space">pic-3 (hidden)</div>
+          <div class="box inner-box">
+            <div class="pic-3"></div>
+            <div class="pic-4"></div>
+            <div class="pic-5"></div>
           </div>
         </div>
       </section>
