idek what i did im so tired

--- a/index.html
+++ b/index.html
@@ -672,10 +672,10 @@
                 <span class="deals__category">Limited quantities.</span>
               </div>
 
-              <h4 class="deals__title">Summer Collection New Morden Design</h4>
+              <h4 class="deals__title">Spring Collection New Morden Design</h4>
 
               <div class="deals__price flex">
-                <span class="new__price">$139.00</span>
+                <span class="new__price">15 Dabloons</span>
                 <span class="old__price">$160.99</span>
               </div>
 
@@ -709,15 +709,15 @@
 
             <div class="deals__item">
               <div class="deals__group">
-                <h3 class="deals__brand">Women Clothing</h3>
+                <h3 class="deals__brand">Pet Products</h3>
                 <span class="deals__category">Limited quantities.</span>
               </div>
 
-              <h4 class="deals__title">Try something new on vacation</h4>
+              <h4 class="deals__title">Feed your dog, or somthing idk</h4>
 
               <div class="deals__price flex">
-                <span class="new__price">$139.00</span>
-                <span class="old__price">$160.99</span>
+                <span class="new__price">$999.00</span>
+                <span class="old__price">$1.99</span>
               </div>
 
               <div class="deals__group">
