added animation to more button

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                   </a>
                   <p>Dog Collar</p>
               </div>
-              <div class="card">
+              <div class="card more">
                   <a href="">
                       <img src="assets/imgs/featured-category-more.png" alt="">
                   </a>
@@ -2687,7 +2687,7 @@
           </h3>
 
           <p class="newsletter__description">
-            ...and receive $25 coupon for first shopping.
+            ...and receive 5 shmeckels coupon for first shopping.
           </p>
 
           <form action="" class="newsletter__form">
