Added the rest of the pages haha...

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
 
     <!-- PRE LOADER -->
-    <!-- <div class="pre-loader">
+    <div class="pre-loader">
         <div class="content">
             <div class="pre-loader-container">
                 <img class="pre-logo-img" src="assets/imgs/logo-pre-loader.png" alt="">
@@ -29,7 +29,7 @@
             </div>
             <div class="loader"></div>
         </div>
-    </div> -->
+    </div>
 
 
     <!-- NAV BAR  -->
